[build-system]
requires = [
    "Cython",
    "setuptools>=45",
    "swig",
]
build-backend = "setuptools.build_meta"

[project]
name = "PyChOpMarg"
description = "Python implementation of COM, as per IEEE 802.3-22 Annex 93A/178A."
version = "2.0.1"
authors = [{name = "David Banas", email = "capn.freako@gmail.com"}]
urls = { documentation = "https://pychopmarg.readthedocs.io/en/latest/"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "BSD3"}
dependencies = [
    "click",
    "scikit-rf>=0.29",
]
keywords=["com", "channel", "margin"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Adaptive Technologies",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: System :: Emulators",
    "Topic :: System :: Networking",
    "Topic :: Utilities"
]

[project.scripts]
pychopmarg = "pychopmarg.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 119

[tool.isort]
# profile = "black"
known_first_party = ["pychopmarg"]
known_third_party = ["numpy", "scipy", "scikit-rf"]

[tool.docformatter]
wrap-summaries = 0

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-vv --durations=3"
xfail_strict=true

[tool.pylint.master]
fail-under = 9.0

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "line-too-long",
]

[tool.pylint.format]
max-line-length = 119

[tool.pydocstyle]
ignore = [
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "skrf.*",
    "chaco.*",
    "enable.*",
    "pyface.*",
    "traits.*",
    "traitsui.*"
]
ignore_missing_imports = true
